[gd_scene load_steps=8 format=2]

[ext_resource path="res://enviroment_tscn/living_items/Army_guy_with_texture_and_all_animation/Army_guy_with_texture_and_all_animation.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemy/opponent_with_state_machine_tutorial/opponent_with_state_machine_tutorial_ai.gd" type="Script" id=2]

[sub_resource type="CapsuleMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true

[sub_resource type="SphereShape" id=2]
margin = 10.0
radius = 0.45

[sub_resource type="CapsuleShape" id=1]
margin = 10.0
radius = 0.9
height = 1.2

[sub_resource type="BoxShape" id=3]
margin = 10.0
extents = Vector3( 10, 1, 10 )

[node name="spatial_head" type="Spatial"]
script = ExtResource( 2 )

[node name="eyes" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="eyes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.78067 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="body" type="KinematicBody" parent="."]

[node name="human (13th copy)" parent="body" instance=ExtResource( 1 )]
transform = Transform( -1.09278e-07, 0, -2.5, 0, 2, 0, 2.5, 0, -1.09278e-07, 0, 0, 0 )

[node name="head" type="Area" parent="body/human (13th copy)"]
transform = Transform( -1.74846e-08, 0, -0.4, 0, 0.5, 0, 0.4, 0, -1.74846e-08, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="body/human (13th copy)/head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.102091, 1.57653, 0 )
shape = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="body"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.257279, 0 )
visible = false
shape = SubResource( 1 )

[node name="raycast_collection" type="Spatial" parent="body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.283329, 0 )

[node name="RayCast1" type="RayCast" parent="body/raycast_collection"]
cast_to = Vector3( 0, 0, 20 )
debug_shape_custom_color = Color( 0.109804, 1, 0.0392157, 1 )
debug_shape_thickness = 5

[node name="sight_range" type="Area" parent="body"]
collision_layer = 16

[node name="CollisionShape" type="CollisionShape" parent="body/sight_range"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10.5423 )
shape = SubResource( 3 )

[node name="hands" type="Spatial" parent="body"]

[connection signal="area_entered" from="body/sight_range" to="." method="_on_sight_range_area_entered"]
[connection signal="area_exited" from="body/sight_range" to="." method="_on_sight_range_area_exited"]
[connection signal="body_entered" from="body/sight_range" to="." method="_on_sight_range_body_entered"]
[connection signal="body_exited" from="body/sight_range" to="." method="_on_sight_range_body_exited"]
